force-app/main/default/objects/Cliente__c/Cliente__c.object-meta.xml
<CustomObject>
    <label>Cliente</label>
    <nameField>
        <displayFormat>C-{000}</displayFormat>
        <label>Numero Cliente</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clienti</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>