force-app/main/default/objects/Cliente__c/fields/Telefono__c.field-meta.xml
<CustomField>
    <fullName>Telefono__c</fullName>
    <label>Telefono</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>